[project]
name = "tnmt-1-github-io"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "tnmt", email = "tanimoto.masashi@protonmail.com" }
]
dependencies = [
    "mkdocs-material>=9.5.50",
    "mkdocs>=1.6.1",
    "pymdown-extensions>=10.14",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-rss-plugin>=1.17.1",
    "mkdocs-mermaid2-plugin>=1.2.1",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-inline-select-svg-plugin>=0.1.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/main"]
